--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ Description: Child theme of Flint. E-commerce theme originally developed for T&T
 Version: 0.0.0
 License: GPLv3
 License URI: LICENSE.md
-Tags: 
+Tags:
 Template: flint
-Template Version: 1.3.3
+Template Version: 1.1.3
 
     Copyright 2015  Star Verte LLC  (email : dev@starverte.com)
-    
+
     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
@@ -31,76 +31,91 @@ Template Version: 1.3.3
 /* =Global
 ----------------------------------------------- */
 
-body,
-button,
-input,
-select,
-textarea {
-}
-html,
-body {
-}
-article {
-}
-b, strong {
-}
-h1 {
-}
-h2 {
-}
-h3 {
-}
-h4 {
-}
-img, video {
-}
-hr {
-}
-.label {
-}
-#page {
-}
-
 /* Alignment */
-.alignleft {
-}
-.alignright {
-}
-.aligncenter {
-}
-.alignnone {
-}
 
 
 /* =Header
 ----------------------------------------------- */
 
-#top-pad {
+body {
+  padding-top: 0;
+}
+#masthead {
+  color: #141e29;
+  background: #dde5ed;
+}
+#masthead #searchform .form-control {
+  width: 100%;
+  border-radius: 0;
+}
+#search_nav {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+@media (min-width: 992px) {
+  #search_nav {
+    padding-top: 28px;
+    padding-bottom: 28px;
+  }
+}
+@media (min-width: 1200px) {
+  #search_nav {
+    padding-top: 45px;
+    padding-bottom: 45px;
+  }
 }
 
 
 /* =Content
 ----------------------------------------------- */
 
-.bypostauthor {
+.btn {
+  border-radius: 0;
 }
-.entry-title {
+.btn-primary {
+  color: #fff;
+  background-color: #a72b2a;
+  border-color: #932625;
 }
-.btn-edit {
+.btn-primary:hover,
+.btn-primary:focus,
+.btn-primary.focus,
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
+  color: #fff;
+  background-color: #7e2120;
+  border-color: #621919;
 }
-.sticky {
+.btn-primary:active,
+.btn-primary.active,
+.open > .dropdown-toggle.btn-primary {
+  background-image: none;
 }
-.byline {
+.btn-primary.disabled,
+.btn-primary[disabled],
+fieldset[disabled] .btn-primary,
+.btn-primary.disabled:hover,
+.btn-primary[disabled]:hover,
+fieldset[disabled] .btn-primary:hover,
+.btn-primary.disabled:focus,
+.btn-primary[disabled]:focus,
+fieldset[disabled] .btn-primary:focus,
+.btn-primary.disabled.focus,
+.btn-primary[disabled].focus,
+fieldset[disabled] .btn-primary.focus,
+.btn-primary.disabled:active,
+.btn-primary[disabled]:active,
+fieldset[disabled] .btn-primary:active,
+.btn-primary.disabled.active,
+.btn-primary[disabled].active,
+fieldset[disabled] .btn-primary.active {
+  background-color: #a72b2a;
+  border-color: #932625;
 }
-.more-link {
-}
-.page-links {
-}
-#primary {
-}
-.page-header {
-}
-.pw {
+.btn-primary .badge {
+  color: #a72b2a;
+  background-color: #fff;
 }
 
 
@@ -112,31 +127,124 @@ hr {
 /* =Navigation
 ----------------------------------------------- */
 
-.navbar-brand {
+.navbar-primary {
+  font-weight: bold;
+  background-color: #141e29;
+  border-color: #030507;
+  border-radius: 0;
+}
+.navbar-primary .navbar-brand {
+  color: #9d9d9d;
+}
+.navbar-primary .navbar-brand:hover,
+.navbar-primary .navbar-brand:focus {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-primary .navbar-text {
+  color: #9d9d9d;
+}
+.navbar-primary .navbar-nav > li > a {
+  color: #9d9d9d;
+}
+.navbar-primary .navbar-nav > li > a:hover,
+.navbar-primary .navbar-nav > li > a:focus {
+  color: #fff;
+  background-color: transparent;
+}
+.navbar-primary .navbar-nav > .active > a,
+.navbar-primary .navbar-nav > .active > a:hover,
+.navbar-primary .navbar-nav > .active > a:focus {
+  color: #fff;
+  background-color: #030507;
+}
+.navbar-primary .navbar-nav > .disabled > a,
+.navbar-primary .navbar-nav > .disabled > a:hover,
+.navbar-primary .navbar-nav > .disabled > a:focus {
+  color: #444;
+  background-color: transparent;
+}
+.navbar-primary .navbar-toggle {
+  border-color: #333;
+}
+.navbar-primary .navbar-toggle:hover,
+.navbar-primary .navbar-toggle:focus {
+  background-color: #333;
+}
+.navbar-primary .navbar-toggle .icon-bar {
+  background-color: #fff;
+}
+.navbar-primary .navbar-collapse,
+.navbar-primary .navbar-form {
+  border-color: #080c11;
+}
+.navbar-primary .navbar-nav > .open > a,
+.navbar-primary .navbar-nav > .open > a:hover,
+.navbar-primary .navbar-nav > .open > a:focus {
+  color: #fff;
+  background-color: #030507;
+}
+@media (max-width: 767px) {
+  .navbar-primary .navbar-nav .open .dropdown-menu > .dropdown-header {
+    border-color: #030507;
+  }
+  .navbar-primary .navbar-nav .open .dropdown-menu .divider {
+    background-color: #030507;
+  }
+  .navbar-primary .navbar-nav .open .dropdown-menu > li > a {
+    color: #9d9d9d;
+  }
+  .navbar-primary .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-primary .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: #fff;
+    background-color: transparent;
+  }
+  .navbar-primary .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-primary .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-primary .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: #fff;
+    background-color: #030507;
+  }
+  .navbar-primary .navbar-nav .open .dropdown-menu > .disabled > a,
+  .navbar-primary .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+  .navbar-primary .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+    color: #444;
+    background-color: transparent;
+  }
+}
+.navbar-primary .navbar-link {
+  color: #9d9d9d;
+}
+.navbar-primary .navbar-link:hover {
+  color: #fff;
+}
+.navbar-primary .btn-link {
+  color: #9d9d9d;
+}
+.navbar-primary .btn-link:hover,
+.navbar-primary .btn-link:focus {
+  color: #fff;
+}
+.navbar-primary .btn-link[disabled]:hover,
+fieldset[disabled] .navbar-primary .btn-link:hover,
+.navbar-primary .btn-link[disabled]:focus,
+fieldset[disabled] .navbar-primary .btn-link:focus {
+  color: #444;
+}
+.nav-pills > li > a {
+  border-radius: 0;
 }
 
 
 /* =Comments
 ----------------------------------------------- */
 
-#comments {
-}
 
 
 /* =Widgets
 ----------------------------------------------- */
 
-.widget {
-}
 
 
 /* =Footer
 ----------------------------------------------- */
-
-#colophon {
-}
-.site-info {
-}
-#credits {
-}
-
