Individual product page template

--- a/style.css
+++ b/style.css
@@ -69,6 +69,30 @@ body {
 /* =Content
 ----------------------------------------------- */
 
+#prologue-wrap {
+  margin-top: -1.5em;
+  margin-bottom: 1em;
+  color: #141e29;
+  background: #dde5ed;
+}
+.single .steel_product {
+  height: 665px;
+  margin-top: 5px;
+  background: #fff;
+}
+.single .steel_product .entry-title {
+  margin-top: 2em;
+  margin-bottom: 1em;
+  font-size: 26px;
+  font-weight: 600;
+  text-align: center;
+}
+.single .steel_product .price {
+  font-weight: 600;
+}
+.single .steel_product .entry-meta {
+  line-height: 2em;
+}
 .btn {
   border-radius: 0;
 }
